<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_produtos" />
        <item
            android:id="@+id/nav_cad_produto"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cad_produto" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_pedidos" />
        <item
            android:id="@+id/nav_cad_pedido"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cad_pedido" />
        <item
            android:id="@+id/nav_busca"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_busca" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_info" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_map" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
