<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/nomeProduto"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textViewCor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cor" />
    <TextView
        android:id="@+id/textViewPrecoCusto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/precoCusto" />
    <TextView
        android:id="@+id/textViewPrecoVenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/precoVenda" />
</androidx.appcompat.widget.LinearLayoutCompat>